--- a/Cura resources/3.4/variants/dxu_0.6.inst.cfg
+++ b/Cura resources/3.4/variants/dxu_0.6.inst.cfg
@@ -1,7 +1,7 @@
 [general]
-name = 0.8 mm
+name = 0.6 mm
 version = 4
-definition = um2d
+definition = dxu
 
 [metadata]
 hardware_type = nozzle
@@ -9,5 +9,5 @@ type = variant
 setting_version = 4
 
 [values]
-machine_nozzle_size = 0.8
-machine_nozzle_tip_outer_diameter = 1.35
+machine_nozzle_size = 0.6
+machine_nozzle_tip_outer_diameter = 1.25
